--- a/my.html
+++ b/my.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <section><div class="half"><h1>Welcome To</h1>
+    <section class="top-banner morgi">
+        <div class="half"><h1>Welcome To</h1>
         <h1><span>Arafat Gazi</span> World!</h1>
         <h3>Build Climber and Train Stopper</h3>
         <p>You might saw me jumping buildings,and stopping trains.But nobody pays me a dime for that work.That's why I am learning and mastering web development.I will not stop until become the Web Development Hero</p>
@@ -20,5 +21,33 @@
     <div class="half"><img src="lol.png" alt=""></div>
 
 </section>
+<section class="dream morgi">
+<div class="half">
+<img src="images/jhankar2.png" alt="">    
+</div>
+<div class="half">
+    <h1>Dream Big</h1>
+    <h3>Become a web developer</h3>
+     <p>I already learned the basic HTML and CSS.I can build any simple website.I can eventeach my grandma how to create simple website.</p>
+     <a class="url" target="blank"href="https://www.facebook.com/profile.php?id=100039857648633">DOWNLOAD RESUME</a>
+</div>
+
+</section>
+<section class="expeience">
+    <h1>Experiences</h1>
+    <div class="morgi">
+        <div id="rata" class="half pro">
+            <h1>Full Stack Developer</h1>
+            <h4 ><span>2021-Present | Pro Level Developer</span></h4>
+            <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function, efficient. I didn't stop with the web. I went beyond with most popular Javascript framework called Vue JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
+        </div>
+        <div id="ko"class="half pro">
+            <h1>Baby Web Developer</h1>
+            <h4><span>2020-2021 | Programming Hero Learner</span></h4>
+            <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and showed it to them. They liked it. And uploaded the content. It was fun working at Programming Hero.</p>
+        </div>
+    </div>
+</section>
+<footer><p>© Peter Parker 2021, a Programming Hero initiative.</p></footer>
 </body>
 </html>
